Navigation bar added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>میزبان ابری رایگان | پارسی</title>
 </head>
 <body>
-    
+    <!-- Navbar --> 
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">پارسی</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">خانه</a></li>
+                    <li><a href="features.html">امکانات</a></li>
+                    <li><a href="docs.html">اسناد</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
