--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <title>میزبان ابری رایگان | پارسی</title>
 </head>
 <body>
-    
+    <!-- Navbar --> 
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">پارسی</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">خانه</a></li>
+                    <li><a href="features.html">امکانات</a></li>
+                    <li><a href="docs.html">اسناد</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>راه‌اندازی سریع‌تر</h1>
+                <p style="direction: rtl;"> شما می‌توانید هر نوع اپلیکشن وب، از رابط‌های برنامه‌نویسی سازمانی در مقیاس بزرگ تا وبسایت‌های استاتیک برای افراد را راه‌اندازی کنید. فرم زیر را پر کنید تا یک نسخه آزمایشی از محصول ما در اختیار شما قرار بگیرد.</p>
+                <a href="features.html" class="btn btn-outline">بیشتر بخوانید</a>
+            </div>
+
+            <div class="showcase-form card">
+                <h2>درخواست نسخه آزمایشی</h2>
+                 <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="نام" required>
+                    </div>
+                    <div class="form-control">
+                        <input  type="text" name="company" placeholder="نام شرکت" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="ایمیل" required>
+                    </div>
+                    <input type="submit" value="ارسال" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
