--- a/index.html
+++ b/index.html
@@ -48,5 +48,32 @@
             </div>
         </div>
     </section>
+
+    <!-- Stats -->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+                به بهترین پلتفرم ساخت اپلیکیشن از هر نوعی با معماری و مقیاس‌بندی مدرن خوش آمدید
+            </h3>
+
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>۱۰,۳۴۹,۴۰۵</h3>
+                    <p class="text-secondary">راه‌اندازی‌ها</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa-3x"></i>
+                    <h3>۹۸۷ TB</h3>
+                    <p class="text-secondary">منتشر شده</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>۲,۳۴۳,۲۶۵</h3>
+                    <p class="text-secondary">پروژه‌ها</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
