--- a/index.html
+++ b/index.html
@@ -75,5 +75,18 @@
             </div>
         </div>
     </section>
+
+    <!-- Cli -->
+    <section class="cli">
+        <div class="container grid">
+            <img src="res/images/cli.png" alt="">
+            <div class="card">
+                <h3 style="text-align: center;">استفاده آسان</h3>
+            </div>
+            <div class="card">
+                <h3 style="text-align: center;">راه‌اندازی در چندثانیه</h3>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
