--- a/index.html
+++ b/index.html
@@ -88,5 +88,17 @@
             </div>
         </div>
     </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">بهترین میزبان ابری</h2>
+                <p class="lead my-1" style="direction: rtl;">میزبانی ابری که پیش از این ندیده‌اید. سریع و کارآمد!</p>
+                <a href="features.html" class="btn btn-dark">بیشتر بخوانید</a>
+            </div>
+            <img src="res/images/cloud.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
