--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
-                <h1>Loruki
+                <h1>Parsi
                 </h1>
                 <p>Copyright &copy; 2020</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="index.html">خانه</a></li>
+                    <li><a href="features.html">امکانات</a></li>
+                    <li><a href="docs.html">اسناد</a></li>
                 </ul>
             </nav>
             <div class="social">
