Final media queries done

--- a/docs.html
+++ b/docs.html
@@ -27,7 +27,7 @@
     <section class="docs-head bg-primary py-3">
         <div class="container grid">
             <img src="res/images/docs.png" alt="">
-            <div style="text-align: right;">
+            <div class="col">
                 <h1 class="xl">اسناد</h1>
                 <p class="lead">
                     چگونگی کار کردن با پلتفرم پارسی را یاد بگیرید
@@ -69,8 +69,6 @@
                     <p>Yarn</p>
                     <pre><code>$ yarn install loruki-cli</code></pre>
                 </div>
-                
-
             </div>
 
             <div class="card bg-light p-3">
