final change ii

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Languages -->
     <section class="languages">
         <h2 class="md text-center my-2">
-            Supported Languages
+            زبان‌های تحت حمایت
         </h2>
         <div class="container flex">
             <div class="card">
